samples/_failures_safe/1761494763_d43344_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3c54808.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_e3c54808.c:140:16: error: missing terminating " character
  140 |         printf("%s %s: %s
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_e3c54808.c:140:9: error: expected expression at end of input
  140 |         printf("%s %s: %s
      |         ^~~~~~
./samples/SAFE/__tmp_e3c54808.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3c54808.c:140:9: error: expected declaration or statement at end of input
